--- a/liff_scan_nid/src/assets/main.css
+++ b/liff_scan_nid/src/assets/main.css
@@ -1,34 +1,39 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     display: flex;
     justify-content: center;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
     font-family: "Inter", sans-serif;
     height: 100vh;
     overflow: hidden;
     /* Prevent scrolling */
 }
 
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+}
+
 .web-camera-container {
     margin: 0;
     padding: 0;
-    display: inline;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
     /* Full viewport height */
     box-sizing: border-box;
-    background-color: #ffffff;
-    /* Black background for better camera contrast */
     overflow: hidden;
 }
 
@@ -54,10 +59,15 @@ body {
 }
 
 .camera-button {
-    margin-bottom: 1rem;
+    height: 60px;
+    width: 60px;
     display: flex;
+    align-items: center;
     justify-content: center;
-    width: 100%;
+    border-radius: 50%;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
 }
 
 .camera-shoot,
@@ -75,7 +85,7 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #eaeaea;
     border: none;
     cursor: pointer;
 }
@@ -87,8 +97,6 @@ body {
 
 .camera-loading {
     position: absolute;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
 }
@@ -144,27 +152,121 @@ body {
 
 .nid-overlay .nid-overlay-inner {
     position: absolute;
-    width: 95%;
-    height: 90%;
+    width: 80%;
+    height: 70%;
     border: 1px solid rgba(255, 255, 255, 0.5);
     /* Inner guide border */
     border-radius: 4px;
 }
-.card-1 {
+
+.bg-web-banner {
     -webkit-text-size-adjust: 100%;
     --rem: 16;
     text-rendering: optimizeLegibility;
     font-size: 26px;
-    font-family: db_helvethaica_x_cond;
+    line-height: 1.42857;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-image: url(https://storage.googleapis.com/line-cj-demo-chatboot/web/scan_nid_titile.png);
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    min-height: 200px;
+    /* Set a reasonable minimum height */
+    height: 35vh;
+    /* Responsive height based on the viewport */
+    max-height: 350px;
+    /* Optional: Limit the max height for larger screens */
+}
+
+.bg-web-banner-2 {
+    -webkit-text-size-adjust: 100%;
+    --rem: 16;
+    text-rendering: optimizeLegibility;
+    font-size: 26px;
     line-height: 1.42857;
     box-sizing: border-box;
     background-repeat: no-repeat;
     padding: 0 40px;
-    background-image: url(https://storage.googleapis.com/line-cj-demo-chatboot/image-cj/cj-sabai-bg.png);
+    background-image: url(https://storage.googleapis.com/line-cj-demo-chatboot/web/sabai-card-center.png);
     width: 100%;
-    background-position: right;
+    background-position: center;
     background-size: cover;
     min-height: 200px; /* Set a reasonable minimum height */
     height: 35vh; /* Responsive height based on the viewport */
     max-height: 350px; /* Optional: Limit the max height for larger screens */
 }
+
+h4 {
+    font-size: 1rem;
+    font-weight: 500;
+    color:  #009e00;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
+}
+
+.formbold-btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+    border-radius: 0.25rem;
+    background-color: #009e00;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+.formbold-btn:hover {
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border:10px solid #FFF;
+    border-radius: 50%;
+    position: relative;
+    transform:rotate(45deg);
+    box-sizing: border-box;
+}
+.loader::before {
+    content: "";
+    position: absolute;
+    box-sizing: border-box;
+    inset:-10px;
+    border-radius: 50%;
+    border:10px solid #009e00;
+    animation: prixClipFix 2s infinite linear;
+}
+
+@keyframes prixClipFix {
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+}
+
+/* HTML: <div class="loader"></div> */
+.warning-nid {
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 30px;
+  color: #0000;
+  background: linear-gradient(90deg,#C02942 calc(50% + 0.5ch),#000 0) right/calc(200% + 1ch) 100%;
+  -webkit-background-clip: text;
+          background-clip: text;
+  animation: l7 2s infinite steps(11);
+}
+.warning-nid:before {
+  content:"Invalid National ID";
+}
+@keyframes l7 {to{background-position: left}}
+      
