--- a/liff_sabai_card/src/assets/styles/register.css
+++ b/liff_sabai_card/src/assets/styles/register.css
@@ -194,6 +194,20 @@ body {
     cursor: pointer;
 }
 
+.formbold-btn-3 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+    border-radius: 5px;
+    padding: 10px 25px;
+    border: none;
+    font-weight: 500;
+    background-color: #be3232;
+    color: white;
+    cursor: pointer;
+}
+
 .formbold-btn:hover {
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
 }
